<resources>
    <string name="app_name">The strawberry</string>
    <string name="title_activity_market">MarketActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Email@Example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_cart">cart</string>
    <string name="action_search">search</string>
    <string name="start_exploring">Start exploring</string>
    <string name="market">Market</string>
    <string name="your_cart">Your cart</string>
    <string name="about_app">About app</string>
    <string name="logout">Logout</string>
    <string name="login">login</string>
    <string name="walk_2">The strawberry shop worked so hard to bring you milk
        flavors that maybe they were never existing, so take your time to choose and
        try different rich and new flavors.</string>
    <string name="walk_1">The strawberry welcomes her dear users to enjoy a whole
        word of sweet tastes that will definitely change how they look at milk,
        Because simply the strawberry shop are the milk flavor champs.</string>
    <string name="walk_3">The strawberry shop has a lot of flavors,
        And for that you try them and see which one you will fall
        in love with.</string>
    <string name="title_walk1">Welcome to the strawberry shop</string>
    <string name="title_walk2">Many tastes same origin</string>
    <string name="title_walk3">Capture your favorite flavors</string>
    <string name="login_action">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="go_to_registration">Go to registration</string>
    <string name="go_to_login">Go to login</string>
    <string name="register">register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="about_desc">This app was made by nerostarx to complete
        the imaginary brand \'The strawberry\' that was created by us a while ago, And
        to showcase the newly created design system \'The X\' by us, for a design or android
        dev business contact us by clicking the one of the buttons below.</string>
    <string name="nav_back">nav_back</string>
    <string name="contact_us">contact us</string>
    <string name="check_us">Check us</string>
    <string name="more_about_the_app">More about the app</string>
    <string name="nothing">nothing</string>
    <string name="question">which drink you want?</string>
    <string name="delete_all">Delete all</string>
    <string name="check_out">Check out</string>
    <string name="delete">delete</string>
    <string name="flavor_info">Flavor info</string>

</resources>