<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_market">

    <fragment
        android:id="@+id/nav_market"
        android:name="com.nerostarx.neromarket.ui.market.MarketFragment"
        android:label="@string/market"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.nerostarx.neromarket.ui.cart.CartFragment"
        android:label="@string/your_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.nerostarx.neromarket.ui.about.AboutFragment"
        android:label="@string/about_app"
        tools:layout="@layout/fragment_about" />
</navigation>