<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_background"
    tools:context=".ui.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/create_a_new_account"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/first_name_input"
                style="@style/Component.TheX.EditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/ic_account"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingTop="16dp"
                android:paddingBottom="16dp" />

            <EditText
                android:id="@+id/first_name_input2"
                style="@style/Component.TheX.EditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/ic_account"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingTop="16dp"
                android:paddingBottom="16dp" />

            <EditText
                android:id="@+id/register_mail_input"
                style="@style/Component.TheX.EditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/ic_account"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_pass_input"
                style="@style/Component.TheX.EditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:singleLine="true"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_pass_input_confirm"
                style="@style/Component.TheX.EditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:singleLine="true"
                android:textStyle="bold" />

            <Button
                android:id="@+id/register_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="32dp"
                android:paddingTop="8dp"
                android:paddingRight="32dp"
                android:paddingBottom="8dp"
                android:text="@string/register"
                android:textSize="18sp"
                app:cornerRadius="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/or"
                android:textAlignment="center" />

            <Button
                android:id="@+id/go_login_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="32dp"
                android:paddingTop="8dp"
                android:paddingRight="32dp"
                android:paddingBottom="8dp"
                android:text="@string/go_to_login"
                android:textSize="18sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_arrow_forward"
                app:iconGravity="end"
                app:iconPadding="16dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
